--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,8 +14,10 @@
     <color name="black_overlay">#66000000</color>
 
 
-    <color name="app_logo_color">#DD48A1</color>
+    <color name="pink">#DD48A1</color>
     <color name="white_80_transparent">#CCFFFFFF</color>
+    <color name="white_70_transparent">#B3FFFFFF</color>
     <color name="white_20_transparent">#33FFFFFF</color>
+    <color name="grey">#C4C4C4</color>
     <color name="main_screen_bg">#0F0F0F</color>
 </resources>
