--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="LogoAppText">
         <item name="fontFamily">@font/georgia_bold_italic</item>
         <item name="android:textSize">52sp</item>
-        <item name="android:textColor">@color/app_logo_color</item>
+        <item name="android:textColor">@color/pink</item>
     </style>
     <style name="Text">
         <item name="fontFamily">@font/nunito_sans_regular</item>
@@ -11,14 +11,31 @@
     <style name="Text.H2">
         <item name="android:textSize">24sp</item>
     </style>
+
     <style name="Text.H2.Light">
         <item name="android:textColor">@color/white_80_transparent</item>
     </style>
     <style name="Text.H2.White">
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="Text.H3">
+        <item name="android:textSize">20sp</item>
+    </style>
+    <style name="Text.H3.Pink">
+        <item name="android:textColor">@color/pink</item>
+    </style>
+    <style name="Text.H3.White">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Text.H4">
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="Text.H4.Light">
+        <item name="android:textColor">@color/white_70_transparent</item>
+    </style>
     <style name="SecondarySplashText" parent="Text.H2.Light">
         <item name="fontFamily">@font/nunito_sans_bold</item>
         <item name="android:letterSpacing">0.035</item>
     </style>
+
 </resources>
