--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="recycler_margin">26dp</dimen>
     <dimen name="recycler_margin_bottom">5dp</dimen>
-    <dimen name="recycler_margin_sides">8dp</dimen>
+    <dimen name="recycler_margin_end">8dp</dimen>
+    <dimen name="recycler_margin_start">16dp</dimen>
     <dimen name="custom_indicator_size">7dp</dimen>
 </resources>
