--- a/app/src/main/res/drawable/rounded_view_bg.xml
+++ b/app/src/main/res/drawable/rounded_view_bg.xml
@@ -2,11 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape
-            android:innerRadius="0dp"
-            android:shape="ring"
-            android:thickness="4dp"
-            android:useLevel="false">
+            android:shape="rectangle">
             <solid android:color="@color/white"/>
+            <corners android:topLeftRadius="25dp" android:topRightRadius="25dp" />
         </shape>
     </item>
 </layer-list>
