--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,8 @@
     <color name="white_70_transparent">#B3FFFFFF</color>
     <color name="white_20_transparent">#33FFFFFF</color>
     <color name="grey">#C4C4C4</color>
+    <color name="light_grey">#D9D5D6</color>
     <color name="main_screen_bg">#0F0F0F</color>
+    <color name="titles">#0F0F0F</color>
+    <color name="large_titles">#0B080F</color>
 </resources>
