--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,15 +27,42 @@
     <style name="Text.H3.White">
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="Text.H3.Black">
+        <item name="android:textColor">@color/large_titles</item>
+    </style>
     <style name="Text.H4">
         <item name="android:textSize">16sp</item>
     </style>
     <style name="Text.H4.Light">
         <item name="android:textColor">@color/white_70_transparent</item>
     </style>
+    <style name="Text.H4.Dark">
+        <item name="android:textColor">@color/large_titles</item>
+    </style>
+    <style name="Text.H5">
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="Text.H5.Black">
+        <item name="android:textColor">@color/large_titles</item>
+    </style>
+    <style name="Text.H5.Light">
+        <item name="android:textColor">@color/white_80_transparent</item>
+    </style>
     <style name="SecondarySplashText" parent="Text.H2.Light">
         <item name="fontFamily">@font/nunito_sans_bold</item>
         <item name="android:letterSpacing">0.035</item>
+    </style>
+    <style name="BookInfoCounts" parent="Text.H3">
+        <item name="android:textColor">@color/titles</item>
+        <item name="fontFamily">@font/nunito_sans_bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+    </style>
+    <style name="BookInfoTitles" parent="Text.H5">
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="fontFamily">@font/nunito_sans_regular</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:letterSpacing">-0.03</item>
     </style>
 
 </resources>
